# depth-conversions

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  project_version.h.in
image-pp/apps/: CMakeLists.txt
image-pp/apps/depth2bearing/: main.cpp
sens_loc/: CMakeLists.txt
sens_loc/apps/: CMakeLists.txt  kinect_intrinsic.txt
sens_loc/apps/depth2bearing/: main.cpp  main_batch.cpp  main_single.cpp
sens_loc/apps/depth2x/: batch_converter.cpp  batch_converter.h  converter_bearing.cpp  converter_curvature.cpp  converter_flexion.cpp  converter_laserscan.cpp  converter_max_curve.cpp  converters.h  main.cpp  main_batch.cpp  main_single.cpp
sens_loc/benchmarks/: CMakeLists.txt
sens_loc/benchmarks/conversion/: bm_bearing.cpp  bm_conversion.cpp  bm_curvature.cpp  bm_triple.cpp  test_conversion.cpp
sens_loc/include/sens_loc/: version.h
sens_loc/include/sens_loc/camera_models/: pinhole.h
sens_loc/include/sens_loc/conversion/: depth_to_bearing.h  depth_to_curvature.h  depth_to_flexion.h  depth_to_laserscan.h  depth_to_max_curve.h  depth_to_triple.h  util.h
sens_loc/include/sens_loc/io/: image.h  intrinsics.h
sens_loc/lib/: CMakeLists.txt
sens_loc/lib/io/: intrinsics.cpp
sens_loc/test/: CMakeLists.txt
sens_loc/test/depth2bearing/: kinect_intrinsic.txt  test_depth2bearing-batch.sh  test_depth2bearing.sh
sens_loc/test/depth2x/: test_depth2x-batch.sh  test_depth2x.sh  test_depth2x_bearing.sh  test_depth2x_flexion.sh  test_depth2x_max_curve.sh  test_depth2x_mean_curvature.sh  test_depth2x_range.sh
sens_loc/unittest/: CMakeLists.txt  test_conversion_curvature.cpp  test_conversion_triple.cpp  test_util.cpp  test_version.cpp
sens_loc/unittest/camera_models/: test_pinhole.cpp
sens_loc/unittest/conversion/: test_depth_to_bearing.cpp  test_depth_to_laserscan.cpp  test_depth_to_max_curve.cpp  test_util.cpp
sens_loc/unittest/io/: test_intrinsics.cpp
sens_loc/unittest/math/: test_angle_conversion.cpp  test_curvature.cpp  test_derivatives.cpp
sens_loc/unittest/util/: test_console.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/depth2x/: batch_converter.cpp  batch_converter.h  converter_bearing.cpp  converter_bearing.h.inl  converter_curvature.cpp  converter_curvature.h.inl  converter_flexion.cpp  converter_flexion.h.inl  converter_laserscan.cpp  converter_laserscan.h.inl  converter_max_curve.cpp  converter_max_curve.h.inl  converter_scale.cpp  converter_scale.h  converters.cpp  converters.h  main.cpp
src/apps/depth_filter/: batch_filter.cpp  batch_filter.h  filter_functor.h  main.cpp
src/apps/feature_extractor/: batch_extractor.cpp  batch_extractor.h  main.cpp
src/apps/feature_performance/: descriptor_characteristica.h  icp.cpp  icp.h  keypoint_distribution.cpp  keypoint_distribution.h  keypoint_transform.h  main.cpp  matching.cpp  matching.h  min_dist.cpp  min_dist.h  minimal_descriptor_distance.h  precision_recall.cpp  precision_recall.h  recognition_performance.cpp  recognition_performance.h
src/apps/keypoint_plotter/: batch_plotter.cpp  batch_plotter.h  main.cpp
src/apps/util/: batch_converter.cpp  batch_converter.h  batch_visitor.h  colored_parse.h  common_structures.h  io.h  parallel_processing.h  statistic_visitor.h  tool_macro.h  version_printer.cpp  version_printer.h
src/benchmarks/: CMakeLists.txt
src/benchmarks/conversion/: bm_bearing.cpp  bm_curvature.cpp  bm_flexion.cpp  bm_laser.cpp  util.h
src/include/sens_loc/: version.h
src/include/sens_loc/analysis/: match.h  (+4 more)
src/lib/analysis/: distance.cpp  keypoints.cpp  match.cpp  precision_recall.cpp  recognition_performance.cpp
src/lib/camera_models/: projection.cpp
src/lib/io/: intrinsics.cpp  pose.cpp
src/lib/plot/: backprojection.cpp
src/lib/util/: console.cpp  correctness_util.cpp  progress_bar_observer.cpp
src/test/: CMakeLists.txt
src/test/depth2x/: laser_intrinsic.txt  test_depth2x.sh  test_depth2x_bearing.sh  test_depth2x_flexion.sh  test_depth2x_gaussian_curvature.sh  test_depth2x_max_curve.sh  test_depth2x_mean_curvature.sh  test_depth2x_range.sh  test_depth2x_scale.sh
src/test/depth_filter/: test_depth_filter.sh  test_depth_filter_bilateral.sh  test_depth_filter_median_blur.sh
src/test/feature_extractor/: test_feature_agast.sh  test_feature_akaze.sh  test_feature_brisk.sh  test_feature_extractor.sh  test_feature_freak.sh  test_feature_orb.sh  test_feature_sift.sh  test_feature_surf.sh
src/test/feature_performance/: orb-0.feature  orb-1.feature  pose-0.pose  pose-1.pose  test_feature_performance.sh  test_feature_performance_keypoints.sh  test_feature_performance_matching.sh  test_feature_performance_min_distance.sh  test_feature_performance_precision_recall.sh  test_feature_performance_recognition_performance.sh
src/test/keypoint_plotter/: sift-1.feature  test_keypoint_plotter.sh  test_keypoint_plotter_only_feature_files.sh  test_keypoint_plotter_overwrite_image.sh
src/unittest/: CMakeLists.txt  test_conversion_flexion.cpp
src/unittest/analysis/: test_distance.cpp  test_keypoints.cpp  test_matches.cpp  test_recognition.cpp
src/unittest/camera_models/: test_equirectangular.cpp  test_pinhole.cpp  test_projection.cpp
src/unittest/conversion/: intrinsic.h  test_conversion_bearing.cpp  test_conversion_bearing_pathological.cpp  test_conversion_curvature.cpp  test_conversion_flexion.cpp  test_conversion_laser.cpp  test_conversion_max_curve.cpp  test_conversion_scaling.cpp  test_depth_to_bearing.cpp  test_util.cpp
src/unittest/io/: not_an_image.txt  test_image.cpp  test_intrinsics.cpp  test_pose.cpp
src/unittest/math/: test_coordinate.cpp  test_derivatives.cpp  test_image.cpp  test_pointcloud.cpp  test_rounding.cpp  test_scaling.cpp  test_triangles.cpp
src/unittest/preprocess/: test_bilateral_filter.cpp  test_bluring.cpp  test_clean.cpp  test_edge_preserving_filter.cpp  test_guided_filter.cpp
src/unittest/static_correctness/: CMakeLists.txt  coordinate.cpp
src/unittest/util/: test_console.cpp  test_msan_findings.cpp  test_terminate.cpp  test_terminate2.cpp  test_version.cpp
(+100 files in other folders)
